@@ -196,6 +196,8 @@
  */
 package org.tio.utils.crypto;
 
+import java.util.Base64;
+
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
@@ -226,7 +228,6 @@ public class ACEUtils {
 	 * @return
 	 * @throws Exception
 	 */
-	@SuppressWarnings("restriction")
 	public static String encrypt(String sSrc, String sKey, String ivStr) throws Exception {
 		// 判断Key是否正确
 		if (sKey == null) {
@@ -243,7 +244,7 @@ public class ACEUtils {
 		cipher.init(Cipher.ENCRYPT_MODE, skeySpec, iv);
 		byte[] encrypted = cipher.doFinal(sSrc.getBytes());
 
-		return new sun.misc.BASE64Encoder().encode(encrypted);//此处使用BASE64做转码功能，同时能起到2次加密的作用。
+		return Base64.getEncoder().encodeToString(encrypted);//此处使用BASE64做转码功能，同时能起到2次加密的作用。
 	}
 
 	/**
@@ -254,7 +255,6 @@ public class ACEUtils {
 	 * @return
 	 * @throws Exception
 	 */
-	@SuppressWarnings("restriction")
 	public static String decrypt(String sSrc, String sKey, String ivStr) throws Exception {
 		// 判断Key是否正确
 		if (sKey == null) {
@@ -269,7 +269,7 @@ public class ACEUtils {
 		Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
 		IvParameterSpec iv = new IvParameterSpec(ivStr.getBytes());
 		cipher.init(Cipher.DECRYPT_MODE, skeySpec, iv);
-		byte[] encrypted1 = new sun.misc.BASE64Decoder().decodeBuffer(sSrc);//先用base64解密
+		byte[] encrypted1 = Base64.getDecoder().decode(sSrc);//先用base64解密
 		byte[] original = cipher.doFinal(encrypted1);
 		String originalString = new String(original);
 		return originalString;
